[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/menu/menus/game_over_menu.gd" type="Script" id=1]
[ext_resource path="res://gui/menu/menu_stack.tscn" type="PackedScene" id=2]

[node name="GameOverMenu" type="ColorRect"]
pause_mode = 2
visible = false
modulate = Color( 0.678431, 0.0941176, 0.0941176, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
color = Color( 0.0509804, 0.027451, 0.0352941, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="MenuStack" parent="." instance=ExtResource( 2 )]

[connection signal="key_button_pressed" from="MenuStack" to="." method="_on_menu_stack_key_button_pressed"]
